test/chainsaw/securityconfig/tokenx/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: security-config-tokendings-egress
  labels:
    accesserator.kartverket.no/controller: securityconfig
    app.kubernetes.io/managed-by: accesserator
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tokenx-api
          podSelector:
            matchLabels:
              app: tokendings
  podSelector:
    matchLabels:
      app: app
  policyTypes:
    - Egress
